--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "learn-angular",
-  "version": "0.0.0",
+  "name": "angular-todo",
+  "version": "0.5.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
