--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -33,4 +33,4 @@ jobs:
         github_access_token: ${{ secrets.GITHUB_TOKEN }} # see the Configuration section for how you can create secrets
         base_href: /todo-angular/   # make sure this corresponds to https://<your_username>.github.io/<base_href>/
         deploy_branch: gh-pages # The branch the action should deploy to.
-        angular_dist_build_folder: dist/todo-angular # The folder where your project is supposed to be after running ng build by the action.
+        angular_dist_build_folder: dist/todo-angular/browser # The folder where your project is supposed to be after running ng build by the action.
